<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterFragment">

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd_BookName_hint" />

    <Button
        android:id="@+id/buttonMakeReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonReport" />

    <Button
        android:id="@+id/buttonLoadFromJSON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLoadFromJSON" />

    <Button
        android:id="@+id/buttonSaveToJSON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSaveToJSON" />

</LinearLayout>
</ScrollView>