<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookAddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20px">

        <EditText
            android:id="@+id/editTextEditBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextAdd_BookAuthor_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextEditBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextAdd_BookAuthor_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextEditIzdName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextAdd_BookPublisher_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextEditDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextAdd_BookPublishDate_hint"
            android:inputType="date"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonEdit" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDelete" />

    <Button
        android:id="@+id/buttonEditBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/buttonBack" />

</LinearLayout>
</ScrollView>